data/derived/comb/progs/unify/prog3718.ml.out
Characters 71-75:
  List.fold_left f base xs;;
                   ^^^^
Error: This expression has type 'a list
       but an expression was expected of type int -> int
